import React from 'react'

import { render } from '@testing-library/react'

import HTTPStatusLabel from '../HTTPStatusLabel'

describe('HTTPStatusLabel', () => {
    it('should render a secondary label for unknown HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={78} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render a secondary label for 1xx HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={100} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render a success label for 2xx HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={200} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render a primary label for 3xx HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={300} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render a danger label for 4xx HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={400} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render a danger label for 5xx HTTP status code', () => {
        const { container } = render(<HTTPStatusLabel statusCode={500} />)
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render an error label for undefined requests', () => {
        const { container } = render(
            <HTTPStatusLabel hasNoRequest={true} statusCode={200} />,
        )
        expect(container.firstChild).toMatchSnapshot()
    })

    it('should render an error label for undefined statusCode', () => {
        const { container } = render(<HTTPStatusLabel statusCode={undefined} />)
        expect(container.firstChild).toMatchSnapshot()
    })
})
